--- a/Italian/main/CloudService.apk/res/values-it/strings.xml
+++ b/Italian/main/CloudService.apk/res/values-it/strings.xml
@@ -153,24 +153,7 @@ Per rimediare a questo, puoi cancellare qualche vecchio file per fare spazio per
     <string name="sync_item_calllog_summary">Sincronizza le chiamate effettuate e ricevute su questo telefono</string>
     <string name="view_storage_title">Mostra spazio cloud</string>
     <string name="storage">Archiviazione</string>
-    <string name="data_syncing">Sincronizza sempre</string>
-    <string name="wifi_sync">Solo con rete Wi-Fi</string>
     <string name="setting">Impostazioni</string>
-    <string name="current">Attuale</string>
-    <string name="flight_mode">Modalità Aereo</string>
-    <string name="internet_disconnected">Nessuna connessione dati</string>
-    <string name="internet">Internet</string>
-    <string name="full_space">Spazio insufficiente</string>
-    <string name="space">Archiviazione</string>
-    <string name="system_sync_off">Sincronizzazione di sistema disattivata</string>
-    <string name="sync">Sincronizza</string>
-    <string name="app_sync_off">Sincronizzazione applicazioni disattivata</string>
-    <string name="micloud">Mi Cloud</string>
-    <string name="wifi_disconnected">Nessuna rete Wi-Fi</string>
-    <string name="wifi">W-Fi</string>
-    <string name="detail">Dettagli</string>
-    <string name="normal">Normale</string>
-    <string name="finish">Completato</string>
     <string name="remind_later">Ricordami più tardi</string>
     <string name="enable_cloud_service_notification">"Non hai attivato Mi Cloud"</string>
     <string name="contact">Contatti</string>
@@ -181,13 +164,33 @@ Per rimediare a questo, puoi cancellare qualche vecchio file per fare spazio per
     <string name="micloud_unlogin_for_time_title">Attiva Mi Cloud</string>
     <string name="micloud_unlogin_for_time_summary" />
     <string name="micloud_main_sync_stop">Interrompi sincronizzazione</string>
+    <string name="micloud_main_sync_pause">Sospendi sincronizzazione</string>
     <string name="micloud_main_stop_sync">Interrompi sincronizzazione</string>
     <string name="micloud_main_suggest_sync">Alcuni elementi devono essere sincronizzati con il tuo Mi Cloud.</string>
+    <string name="micloud_main_set_internet">Rete</string>
     <string name="micloud_main_sync_now">Sincronizza adesso</string>
     <string name="micloud_main_network_error">Impossibile connettersi alla rete. Controlla le impostazioni di rete e riprova.</string>
     <string name="micloud_main_sync_on_wifi">Utilizza Wi-Fi</string>
     <string name="micloud_main_data_unsynced">%d non sincronizzato</string>
+    <string name="micloud_main_detail">Mostra dettagli</string>
+    <string name="micloud_main_network_abnormal">Impossibile collegarsi alla rete</string>
+    <string name="micloud_main_syncing">Sincronizzazione dati...</string>
     <string name="micloud_main_last_sync_time">Ultima sincronizzazione</string>
+    <string name="micloud_main_synced_data_count">%d dati sono sincronizzati</string>
+    <string name="micloud_main_wlan_sync_data_count">%d dati verranno sincronizzati con Wi-Fi</string>
+    <string name="micloud_main_space_full">Spazio esaurito</string>
+    <string name="micloud_main_space_risk">%d dati da sincronizzare. Libera spazio di archiviazione.</string>
+    <string name="micloud_main_update_space">Aggiornamento spazio</string>
+    <string name="micloud_detail_syncing">Sincronizzazione</string>
+    <string name="micloud_detail_pending">In attesa</string>
+    <string name="micloud_detail_success">Sincronizzato</string>
+    <string name="micloud_detail_fail">Fallita</string>
+    <string name="micloud_detail_lastest">Sincronizzato</string>
+    <string name="micloud_detail_preference_syncing">Sincronizzazione</string>
+    <string name="micloud_detail_preference_wlan">Sincronizza con Wi-Fi</string>
+    <string name="micloud_detail_wlan">%d dati non sincronizzati</string>
+    <string name="micloud_detail_wlan_contact">%d foto contatti non sincronizzati</string>
+    <string name="micloud_detail_wlan_mms">%d MMS non sincronizzati</string>
     <string name="upgrade_space_gb">GB</string>
     <string name="upgrade_space_tb">TB</string>
     <string name="upgrade_space_mibipreyear">"%s Mi Credit all'anno"</string>
