--- a/Italian/main/Email.apk/res/values-it/strings.xml
+++ b/Italian/main/Email.apk/res/values-it/strings.xml
@@ -36,6 +36,8 @@
     <string name="account_settings_action">Impostazioni account</string>
     <string name="account_settings_background_attachments_label">Scarica allegati</string>
     <string name="account_settings_background_attachments_summary">Scarica automaticamente gli allegati solo tramite Wi-Fi</string>
+    <string name="account_settings_chat_mode_enable">Modalità conversazione</string>
+    <string name="account_settings_chat_mode_summary">Tocca per unire in gruppo le lemail ed attivar ela modalità conversazione</string>
     <string name="account_settings_data_usage">Utilizzo dati</string>
     <string name="account_settings_description_label">Nome account</string>
     <string name="account_settings_edit_quick_responses_label">Risposte rapide</string>
@@ -223,6 +225,7 @@
     <string name="attachment_application_vnd_ms_excel">Foglio di calcolo</string>
     <string name="attachment_application_vnd_ms_powerpoint">Presentazione</string>
     <string name="attachment_audio">Audio</string>
+    <string name="attachment_bar_title">Allegati</string>
     <string name="attachment_canceling">Annullamento in corso, attendere prego!</string>
     <string name="attachment_decoding">Allegato scaricato completamente, decodificazione in corso, attendere prego.</string>
     <string name="attachment_download_all">Scarica tutto</string>
@@ -266,8 +269,15 @@
     <string name="change_account_type">Modifica tipo di account</string>
     <string name="change_folders_selection_dialog_title">Cambia cartelle</string>
     <string name="change_sync_settings">Modifica impostazioni di sincronizzazione</string>
-    <string name="chat_type_name">chat</string>
-    <string name="check_setup_data">Validazione impostazioni server…</string> 
+    <string name="chat_item_msg_people_unit">persone</string>
+    <string name="chat_item_msg_user_etc">…</string>
+    <string name="chat_item_msg_user_saying">dice:</string>
+    <string name="chat_type_name">conversazioni</string>
+    <string name="chat_view_description">Unisci la lista per visualizzare le conversazioni</string>
+    <string name="chat_view_quote_text">-----Testo Citato-----</string>
+    <string name="chat_view_retract_quote_text">---Nascondi Testo Citato---</string>
+    <string name="chat_view_title">Show conversation</string>
+    <string name="check_setup_data">Validazione impostazioni server…</string>
     <string name="checking_for_mail">Controlla email</string>
     <string name="choosertitle_sharevia">Condividi tramite</string>
     <string name="clear">Cancella</string>
@@ -402,6 +412,11 @@
     <string name="file_not_found_reDownload">File non trovato, prova di nuovo!</string>
     <string name="file_rar_not_support">File .rar protetti non supportati!</string>
     <string name="filtered_tag">[%1$s]%2$s</string>
+    <string name="flow_saved_dlg_do_not_show">Non chiedere più</string>
+    <string name="flow_saved_dlg_i_know">OK</string>
+    <string name="flow_saved_dlg_message">%1$d nuovi messaggi. Risparmiati %2$s (dati rete mobile).</string>
+    <string name="flow_saved_dlg_title">Reduced your data usage</string>
+    <string name="flow_saved_preference_total">Saved %1$s.</string>
     <string name="folder_drafts_name_en0">Bozze</string>
     <string name="folder_drafts_name_en1">Bozza</string>
     <string name="folder_icon_desc">Icona cartella</string>
@@ -656,7 +671,7 @@ CC: %4$s
     <string name="pop3_name">POP3</string>
     <string name="prefDialogTitle_conversationListIcon">Immagine mittente</string>
     <string name="prefDialogTitle_removal_action">Archivio e operazioni cancellate</string>
-	<string name="preference_head_load_description">Scarica solo i titoli delle email, quando stai utilizzano i dati mobili.</string>
+    <string name="preference_head_load_description">Scarica solo i titoli delle email, quando stai utilizzano i dati mobili.</string>
     <string name="preference_head_load_title">Riduci utilizzo dati</string>
     <string name="preference_removal_action_title">Archivio e operazioni cancellate</string>
     <string name="preference_sender_image_description">Mostra a fianco al nome nella lista</string>
@@ -686,18 +701,54 @@ CC: %4$s
     <string name="quick_3">Lo leggerò più tardi e ti farò sapere.</string>
     <string name="quick_4">Organizziamo una riunione per discuterne.</string>
     <string name="quick_reply_dialog_title">Scegli</string>
+    <string name="quick_reply_hint">Rispondi a tutte le %1$d persone</string>
+    <string name="quick_reply_hint_bcc">(In Ccn)</string>
+    <string name="quick_reply_hint_cc">(In Cc)</string>
     <string name="quick_responses_empty_view">Nessuna risposta rapida</string>
+    <string name="quote_begin">&lt;div class=\"quote\"></string>
+    <string name="quote_divider_1">-------- Messaggio originale --------</string>
+    <string name="quote_divider_10">-----------------------------------</string>
+    <string name="quote_divider_11">----- Originale -----</string>
+    <string name="quote_divider_12"> Messaggio originale </string>
+    <string name="quote_divider_2">---Messaggio originale---</string>
+    <string name="quote_divider_3">-------- Messaggio originale --------</string>
+    <string name="quote_divider_4">-----Messaggio originale-----</string>
+    <string name="quote_divider_5">-----------Linea divisoria di riferimento-------------</string>
+    <string name="quote_divider_6">---Originale---</string>
+    <string name="quote_divider_7">Messaggio originale</string>
+    <string name="quote_divider_8">_____________________________________</string>
+    <string name="quote_divider_9">--------------------------------------------------</string>
+    <string name="quote_divider_apple">"
+>"</string>
+    <string name="quote_divider_huawei_zh">Inviato dal mio Huawei</string>
+    <string name="quote_divider_ipad_zh">Inviato dal mio iPad</string>
+    <string name="quote_divider_iphone_en">Inviato dal mio iPhone</string>
+    <string name="quote_divider_iphone_fwd_en">Inizio messaggio inoltrato:</string>
+    <string name="quote_divider_iphone_fwd_zh">Messaggio inoltrato：</string>
+    <string name="quote_divider_ks_web">________________________________________</string>
+    <string name="quote_divider_qq_en">------------------ Originale ------------------</string>
+    <string name="quote_divider_qq_zh">------------------ Messaggio originale ------------------</string>
+    <string name="quote_divider_wps_zh">Dal fondo di mail WPS</string>
+    <string name="quote_divider_wps_zh_hk">Dal fondo di email WPS</string>
+    <string name="quote_divider_xm_rsh">Отправлено с MiPhone</string>
+    <string name="quote_divider_xm_zh">Creato dal mio telefono Xiaomi</string>
+    <string name="quote_divider_xm_zh_hk">Creato dal mio telefono Xiaomi</string>
     <string name="quoted_text">Includi testo citato</string>
+
+
     <string name="quoted_text_label">Testo citato</string>
     <string name="read_string">Conversazione letta</string>
     <string name="recent_folders_heading">Cartelle recenti</string>
     <string name="recipient_error_dialog_title">Errore destinatario</string>
     <string name="recipient_needed">Aggiungi almeno un destinatario.</string>
+    <string name="recipient_null_dialog_title">Avviso</string>
     <string name="refresh">Aggiorna</string>
     <string name="refreshing">Aggiornamento…</string>
     <string name="refreshing_done">Sincronizzazione completata</string>
     <string name="release_to_refresh">Rilascia per aggiornare</string>
     <string name="remote_folders_heading">Cartelle server</string>
+    <string name="remote_search">Tutte le email sul server</string>
+    <string name="remote_search_result">%s email trovate sul server.</string>
     <string name="remove_account">Rimuovi account</string>
     <string name="remove_account_confirm">"L'account \"%1$s\" verrà rimosso da WPSMail."</string>
     <string name="remove_folder">Rimuovi da %1$s</string>
@@ -792,6 +843,7 @@ CC: %4$s
     <string name="tap_to_configure_folder_sync">Sincronizza cartella</string>
     <string name="tap_to_enable_sync">Tocca per attivare.</string>
     <string name="time_error">Errore timeout</string>
+    <string name="tip_cannot_switchview_in_unread_folder">Impossibile cambiare visualizzazione in modalità aggregamento</string>
     <string name="to">A</string>
     <string name="to_heading">"A: "</string>
     <string name="too_large_to_attach_additional">File non allegato. Limite di %1$s raggiunto.</string>
