--- a/Italian/main/Settings.apk/res/values-it/strings.xml
+++ b/Italian/main/Settings.apk/res/values-it/strings.xml
@@ -19,14 +19,17 @@
     <string name="music_mi_effect_title">Dirac HD Sound</string>
     <string name="music_mi_effect_summary">Abilita sempre Dirac HD Sound se ascolti tramite altoparlante</string>
     <string name="music_headphone_settings">Impostazione tipo di auricolari</string>
-    <string name="music_dirac_mode_in_ear">Cuffie Mi in-ear</string>
-    <string name="music_dirac_mode_earbuds">Auricolari Mi</string>
-    <string name="music_dirac_mode_piston_100">Mi piston-1</string>
+    <string name="music_dirac_control">Ottimizza qualità audio</string>
+    <string name="music_dirac_mode_off">Dirac disattivato</string>
     <string name="music_dirac_mode_general">Generale</string>
     <string name="music_dirac_mode_general_earbuds">Generali</string>
     <string name="music_dirac_mode_general_inear">In-ear normale</string>
+    <string name="music_dirac_mode_in_ear">Cuffie Mi in-ear</string>
+    <string name="music_dirac_mode_earbuds">Auricolari Mi</string>
+    <string name="music_dirac_mode_piston_100">Mi Piston</string>
+    <string name="music_dirac_mode_piston_1">Mi piston-1</string>
     <string name="music_dirac_mode_piston_2">Mi piston-2</string>
-    <string name="music_dirac_mode_piston_youth">Mi piston-youth</string>
+    <string name="music_dirac_mode_piston_basic">Edizione Base</string>
     <string name="music_audio_effect_settings">Impostazioni audio</string>
     <string name="music_equalizer">Equalizzatore</string>
     <string name="menu_item_show_more">Altro</string>
@@ -65,6 +68,8 @@
     <string name="status_bar_settings_show_carrier_summary">Mostra solo nella schermata di blocco</string>
     <string name="status_bar_settings_show_wifi_name">Mostra Wi-Fi</string>
     <string name="status_bar_settings_custom_wifi_name">Modifica nome rete Wi-Fi</string>
+    <string name="status_bar_settings_toggle_position">Posizione comndi</string>
+    <string name="status_bar_settings_long_click_sort">Tieni premuto per ordinare</string>
     <string name="status_bar_screen_button_key">Tasti virtuali su schermo</string>
     <string name="status_bar_key_position_custom">Personalizza posizione tasti</string>
     <string name="status_bar_screen_key_menu">Tasto Menu</string>
@@ -2073,9 +2078,6 @@ Qualsiasi utente può accettare le autorizzazioni delle applicazioni aggiornate 
     <string name="user_image_choose_photo">Scegli la foto dalla Galleria</string>
     <string name="regulatory_info_text" />
     <string name="wifi_display_settings_empty_list_wifi_display_disabled">Il display wireless è disabilitato perchè il Wi-Fi è spento</string>
-    <string name="cmcc_dm_settings_title">Gestione Permessi Dispositivo</string>
-    <string name="cmcc_dm_settings_enable_summary">Attiva avvio automatico</string>
-    <string name="cmcc_dm_settings_disable_summary">Disattiva avvio automatico</string>
     <string name="config_mtp_function_name">mtp</string>
     <string name="config_ptp_function_name">ptp</string>
     <string name="config_mass_storage_function_name">memoria di massa</string>
@@ -2432,9 +2434,9 @@ Qualsiasi utente può accettare le autorizzazioni delle applicazioni aggiornate 
     <string name="dirac_mode_general">Generale</string>
     <string name="dirac_mode_general_earbuds">Auricolari generali</string>
     <string name="dirac_mode_general_inear">Auricolare generale</string>
-    <string name="dirac_mode_piston_1">Auricolari Xiaomi piston 1</string>
-    <string name="dirac_mode_piston_2">Auricolari Xiaomi piston 2</string>
-    <string name="dirac_mode_piston_youth">Auricolari Xiaomi piston-youth</string>
+    <string name="dirac_mode_piston_1">Mi Piston 1</string>
+    <string name="dirac_mode_piston_2">Mi Piston 2</string>
+    <string name="dirac_mode_piston_youth">Mi Piston-youth</string>
     <string name="equalizer">EQ</string>
     <string name="wifi_menu_wfd">Display wireless</string>
     <string name="wfd_settings_title">Display wireless</string>
