--- a/Italian/main/XiaomiAccount.apk/res/values-it/strings.xml
+++ b/Italian/main/XiaomiAccount.apk/res/values-it/strings.xml
@@ -77,6 +77,8 @@
     <string name="login_instead_reg_with_email">Usa questa email</string>
     <string name="get_back_pwd">Recupera password account</string>
     <string name="login_failed">Accesso fallito</string>
+    <string name="logout_failed">Impossibile uscire</string>
+    <string name="timeout_retry">RIchiesta scaduta, riprovare.</string>
     <string name="verification_failed">Autenticazione fallita</string>
     <string name="error_network">Problemi con la connessione di rete</string>
     <string name="error_ssl_hand_shake">Errore durante la connessione al server. Prova ad impostare data e ora sul tuo sistema sulla data e ora correnti.</string>
@@ -252,4 +254,5 @@ Puoi utilizzarlo per accedere e recuperare la password."</string>
     <string name="theme_store">MIUI Theme Store</string>
     <string name="theme_store_dspt">Scegli il tuo look. Centinaia di temi gratuiti e personalizzabili per rendere unico il tuo telefono.</string>
     <string name="mi_account_dspt_provision">Accedi a Mi Cloud, MIUI Theme Store ed altri servizi Mi con un unico account.</string>
+    <string name="authorize_title">Autorizzazione</string>
 </resources>
